      containing port, software version, and command register base


2003-08-28 Damien <ddouxchamps@users.sf.net>
    * fixed feature detection: we now use both 0x404 and 0x5XX registers in
      dc1394_is_feature_present. dc1394_query_feature_control is deprecated
      and has been commented out. 

2003-09-02  Dan Dennedy <dan@dennedy.org>
    * examples/*.c: call dc1394_destroy_handle() to cleanup mem and show
      proper technique
    * examples/dc1394_multiview.c: show new proper technique of multi-capture by
      creating a handle for each camera as opposed to port.
    * examples/gray_color_image.c: new example similar to grab_gray_image, but
      also contains example code how to locate first camera on any port and 
      attempt to make the camera non-root.

2003-09-15 Damien <ddouxchamps@users.sf.net>
    * fixed format7 capture setting when the current size register is initialized
      to zero at the camera boot.
	  
2003-09-02  Dan Dennedy <dan@dennedy.org>
    * examples/grab_color_image.c: remove auto settings, add --guid option, add
      filename argument.
    * examples/dc1394_vloopback.c: add scaling, set default mode to mmap, add 
      mmap double buffering, add pipe mode option, adjust palette by option
      (pipe) or by ioctl, lookup default v4l device name via procfs, daemon
      option.

2003-09-23  Dan Dennedy <dan@dennedy.org>
   * examples/grab_color_image.c: fix locating cam by guid on any port
   * examples/dc1394_vloopback.c: add --guid option like grab_color_image
     and renamed some options, and added root detection and reset
	
2003-09-15 Damien <ddouxchamps@users.sf.net>
    * fixes/additions by Johann Schoonees:
    * fixed format7 capture setup function missing some parameters 
    * fixed compil warning in dc1394_absolute.c, line 261.
    * fixed harmless but misleading bug in dc1394_format7.c: line 802 should be removed.
    * add functions dc1394_get_one_shot and dc1394_get_multi_shot.